Fix info icon being stretched in the table

--- a/src/components/Table/HeaderCell/styles.module.css
+++ b/src/components/Table/HeaderCell/styles.module.css
@@ -10,6 +10,11 @@
     }
 
     .icon {
+        flex-shrink: 0;
         font-size: var(--go-ui-height-icon-multiplier);
+    }
+
+    .info-popup-icon {
+        flex-shrink: 0;
     }
 }
